--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Hi</title>
 </head>
 <style type="text/css">
+  body {
+    background-color: green;
+    color: white;
+  }
 h1 {
   position:absolute;
   top:40%;
