--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style type="text/css">
   body {
-    background-color: green;
+    background-color: #e74c3c;
     color: white;
   }
 h1 {
