--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <style type="text/css">
   body {
-    background-color: #e74c3c;
-    color: white;
+    background-color: white;
+    color: black;
   }
 h1 {
   position:absolute;
