--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style type="text/css">
   body {
     background-color: white;
-    color: black;
+    color: #333;
   }
 h1 {
   position:absolute;
